gccida/c2/rm_other_notes
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_other_notes/src/haifa-sched.c:1820:4: error: expected ';' after expression
rtx v3; // r9 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_other_notes/src/haifa-sched.c:1820:5: error: use of undeclared identifier 'v3'
rtx v3; // r9 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_other_notes/src/haifa-sched.c:1822:4: error: expected ';' after expression
rtx v5; // r11 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_other_notes/src/haifa-sched.c:1822:5: error: use of undeclared identifier 'v5'
rtx v5; // r11 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_other_notes/src/haifa-sched.c:1823:4: error: expected ';' after expression
rtx v6; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_other_notes/src/haifa-sched.c:1823:5: error: use of undeclared identifier 'v6'
rtx v6; // rdx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_other_notes/src/haifa-sched.c:1825:4: error: expected ';' after expression
rtx v8; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_other_notes/src/haifa-sched.c:1825:5: error: use of undeclared identifier 'v8'
rtx v8; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_other_notes/src/haifa-sched.c:1834:1: error: use of undeclared identifier 'v3'
v3 = 0LL; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_other_notes/src/haifa-sched.c:1836:1: error: use of undeclared identifier 'v5'
v5 = head; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_other_notes/src/haifa-sched.c:1839:17: error: use of undeclared identifier 'v5'
if ( *( _WORD *)v5 != 37 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_other_notes/src/haifa-sched.c:1841:1: error: use of undeclared identifier 'v6'
v6 = v5; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_other_notes/src/haifa-sched.c:1841:6: error: use of undeclared identifier 'v5'
v6 = v5; 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_other_notes/src/haifa-sched.c:1844:16: error: use of undeclared identifier 'v5'
v7 = ( __int64)v5[1]; 
               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_other_notes/src/haifa-sched.c:1845:1: error: use of undeclared identifier 'v8'
v8 = v5; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_other_notes/src/haifa-sched.c:1845:6: error: use of undeclared identifier 'v5'
v8 = v5; 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_other_notes/src/haifa-sched.c:1848:1: error: use of undeclared identifier 'v6'
v6 = v8[1].fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_other_notes/src/haifa-sched.c:1848:6: error: use of undeclared identifier 'v8'
v6 = v8[1].fld[0].rtx; 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_other_notes/src/haifa-sched.c:1850:26: error: use of undeclared identifier 'v6'
*( _QWORD *)( v7 + 24) = v6; 
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_other_notes/src/obj/haifa-sched.o] Error 1
